style: add flex-start alignment to news-list__item for preventing image distortion

--- a/index.css
+++ b/index.css
@@ -27,6 +27,7 @@ img {
 
 .news-list__item {
   display: flex;
+  align-items: flex-start;
 }
 
 .item__cover + .item__article {
